--- a/src/components/SavedArticles/SavedArticles.css
+++ b/src/components/SavedArticles/SavedArticles.css
@@ -1,15 +1,12 @@
 .saved-articles {
   text-align: center;
   background-color: #dee4e7;
-  height: 100vh;
   height: 100%;
-  min-height: 100vh;
 }
 
 .saved-articles-dark {
   background-color: #364953;
-  height: 100vh;
-  min-height: 100vh;
+  height: 100%;
   text-align: center;
 }
 
